Fixed: Note text size overflow

--- a/styles/note.css
+++ b/styles/note.css
@@ -1,6 +1,6 @@
 #noteArea
 {
-	width: min(41vh, 90vw);
+	width: 100%;
 	height: 20vh;
 
 	position: absolute;
@@ -18,7 +18,6 @@
 	padding: 2vh;
 	white-space: nowrap;
 
-
 	background-color: rgba(10, 22, 48, 0.75);
 	backdrop-filter: blur(10px);
 }
@@ -27,9 +26,9 @@
 {
 	color: white;
 	font-family: "Times New Roman", serif;
-	font-style: italic;
-	font-size: 3vh;
-	line-height: 4vh; 
+	xfont-style: italic;
+	font-size: min(3vh, 6vw);
+	line-height: min(4vh, 8vw);
 }
 
 .animatedWord
